--- a/_lectures/04_ISA_2.md
+++ b/_lectures/04_ISA_2.md
@@ -13,3 +13,4 @@ links:
 - [Blem 2013](https://dipsankarb.github.io/wi22-csl7070/pdfs/blem13.pdf)
 - [Blog on Blem 2013](https://parvmor.github.io/2019/04/08/risc-vs-cisc/)
 - [Colwell 1985](https://dipsankarb.github.io/wi22-csl7070/pdfs/colwell85.pdf)
+- Chapter 1,2 : Hennessey , Patterson: Computer Organization and Design book.
